modified:   package-lock.json 	modified:   package.json 	modified:   src/App.jsx 	modified:   src/Components/About.jsx 	new file:   src/Components/Contact.jsx 	modified:   src/Components/Footer.jsx 	modified:   src/Components/Portfolio.jsx 	new file:   src/images/Dataverse_scalable.svg 	new file:   src/images/PowerApps_scalable.svg 	new file:   src/images/PowerAutomate_scalable.svg 	new file:   src/images/PowerBI_scalable.svg 	new file:   src/images/PowerPages_scalable.svg 	new file:   src/images/PowerPlatform_scalable.svg 	new file:   src/images/PowerVirtualAgents_scalable.svg 	new file:   src/images/Vector.svg 	new file:   src/images/mail.svg 	new file:   src/images/onelake-icon.png 	new file:   src/images/synapse-data-warehouse-icon.png 	new file:   src/images/user.png 	modified:   src/styles.css 	new file:   yarn.lock

--- a/src/styles.css
+++ b/src/styles.css
@@ -92,11 +92,6 @@ h2 {
   padding-top: 1rem;
 }
 
-h3 {
-  font-weight: 400;
-  font-size: 1.25rem;
-  margin: 0;
-}
 
 p {
   font-size: 18px;
@@ -122,7 +117,7 @@ li {
 }
 
 li::marker {
-  color: #4e567e;
+  color: black;
 }
 
 a {
@@ -131,25 +126,180 @@ a {
 }
 
 a:hover {
-  color: #4e567e;
+  color: black;
 }
 
 .container {
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: 330px 300px;
-  margin: 20px auto;
-}
-
-.container .box {
-  border-radius: 10px;
-  border: 1px solid rgb(204, 204, 204);
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  padding: 24px 16px;
+  align-items: flex-start;
+  justify-content: center;
+  margin-left: 790px;
+}
+
+.row {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.box {
+  width: 458px;
+  height: 276px;
+  border-radius: 10px;
+  border: 1px solid rgb(204, 204, 204);
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body,
+#root {
+  height: 100%;
+  width: 100%;
+  font-family: "Poppins", sans-serif;
+}
+
+.app-container {
+  background: white;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin: 10px 0;
+  width: 943px;
+}
+
+.checkbox-group {
+  flex-direction: row;
+  align-items: center;
+}
+
+.checkbox-group label {
+  font-size: 0.825rem;
+  margin-left: 10px;
+}
+
+.form-group label {
+  color: #979797;
+  font-weight: 500;
+}
+
+.form-group input {
+  padding: 12px;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  background-color: #F9F9FB;
+  color: #979797;
+  height: 50px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  outline: 1px solid 444;
+}
+
+.form-group textarea {
+  padding: 12px;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  background-color: #F9F9FB;
+  color: #979797;
+  height: 50px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  outline: 1px solid 444;
+}
+
+.form-group textarea::placeholder {
+  color: #999;
+}
+
+.form-group input::placeholder {
+  color: #999;
+}
+
+.form-group .input-error {
+  outline: 1px solid rgb(255, 72, 72);
+}
+
+.form-group .error-message {
+  color: rgb(255, 72, 72);
+  font-size: 0.75rem;
+  margin-top: 8px;
+}
+
+.form-group select {
+  padding: 12px;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  background-color: #444;
+  color: #eee;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.form-group button {
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  color: #eee;
+  background-color: #49a1b8;
+  font-weight: 500;
+  font-size: 1rem;
+  margin-top: 10px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  transition: all 500ms ease;
+}
+
+.form-group button:hover {
+  cursor: pointer;
+  background-color: #61dbfb;
+}
+
+.project-info {
+  margin-top: auto;
   text-align: center;
 }
+.project {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+
+
+h3 {
+  margin: 0;
+  font-size: 20px;
+}
+
+h4 {
+  margin: 0;
+  font-size: 18px;
+  margin-top: 10px;
+}
+
+p {
+  margin: 0;
+  font-size: 16px;
+  margin-top: 5px;
+}
+
+
 
 img.socialIcon {
   height: 30px;
